--- a/nodeapi/package.json
+++ b/nodeapi/package.json
@@ -7,13 +7,16 @@
     "dev": "cross-env PORT=3000 DEBUG=nodeapi:* nodemon"
   },
   "dependencies": {
+    "async": "^3.2.0",
     "body-parser": "^1.19.0",
+    "chance": "^1.1.4",
     "connect-multiparty": "^2.2.0",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.2",
     "debug": "~2.6.9",
-    "ejs": "~2.6.1",
+    "ejs": "^2.6.2",
     "express": "~4.16.1",
+    "express-validator": "^6.4.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.12",
     "morgan": "~1.9.1",
